# notas-musicais

./: mkdocs.yml  pyproject.toml
docs/stylesheets/: extra.css
notas_musicais/: escalas.py
